--- a/src/styles/scss/components/login-form.scss
+++ b/src/styles/scss/components/login-form.scss
@@ -5,7 +5,7 @@
 .login-form {
     font-size: 2.2rem;
     display: inline-block;
-    margin: 0 auto;
+    margin: 2rem auto;
     padding: 10rem;
     font-family: 'Roboto', sans-serif;
     color: $color-gray;
@@ -77,8 +77,13 @@
     }
 
     &__p {
-        font-size: 2.1rem;
+        font-size: 2.2rem;
         font-family: 'Roboto', sans-serif;
         transform: translateY(-17.5%);
+        
     }
+}
+
+.register-line {
+    margin-top: 4rem;
 }
